--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
   
-      <groupId>com.doj</groupId>
+           <groupId>com.doj</groupId>
 
         <artifactId>com.doj.web</artifactId> 
         <version>0.0.1-SNAPSHOT</version> 
@@ -82,8 +82,10 @@
            <id>jacoco-initialize</id>        
            <goals>          
              <goal>prepare-agent</goal>        
-           </goals>        </execution>      
-         <execution>       <id>jacoco-site</id>       
+           </goals>        
+	       </execution>      
+         <execution>       
+		 <id>jacoco-site</id>       
            <phase>test</phase>       
            <goals>       
            <goal>report</goal>    
