--- a/pom.xml
+++ b/pom.xml
@@ -20,10 +20,10 @@
       <java.version>1.8</java.version>
    </properties>
    <dependencies>
-      <dependency>
+     <!-- <dependency>
          <groupId>org.springframework.cloud</groupId>
          <artifactId>spring-cloud-starter-eureka</artifactId>
-      </dependency>
+      </dependency> -->
       <dependency>
          <groupId>org.springframework.cloud</groupId>
          <artifactId>spring-cloud-starter-ribbon</artifactId>
