--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,10 +9,10 @@ spring:
       suffix: .jsp
 
 # Discovery Server Access
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://10.1.4.6:1111/eureka/
+#eureka:
+ # client:
+ #   serviceUrl:
+ #     defaultZone: http://10.1.4.6:1111/eureka/
 server:
    port: 2222
 
