--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 # Service registers under this name
 # Control the InternalResourceViewResolver:
-spring:
-  application:
-    name: accounts-web
+#spring:
+#  application:
+ #   name: accounts-web
   mvc:
     view:
       prefix: /WEB-INF/views/
