--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,10 @@
             <artifactId>jacoco-maven-plugin</artifactId>
             <version>0.7.4.201502262128</version>
         </dependency>
+        <dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-hystrix</artifactId>
+		</dependency>
    </dependencies>
    <dependencyManagement>
       <dependencies>
